--- a/Lecture-01/index.html
+++ b/Lecture-01/index.html
@@ -45,16 +45,28 @@
     </ul>
     <ol>
         <!-- list item -->
-        <li> item 1</li>
+        <li> <a href="http://google.com">some where</a></li>
         <li> item 2</li>
         <li> item 3</li>
 
     </ol>
     <p>
-        Day la dong thu nhat
-    </p>
-    
+        <center></center>
+        <!-- depecrated -->
+        <!-- tag mau` do la ko nen su dung -->
+        <strike>sadas</strike> Day la <i>dong</i> <b>thu</b> <sub>hah</sub> nhat
+        <!-- format  -->
+        <!-- chen video / sound -->
 
+        <!-- 
+            <video controls autoplay>
+            <source src="../assets/htmlcss1-vid_brown-bear.mp4" type="video/mp4">
+        </video> -->
+        <video srs="../assets/htmlcss1-vid_brown-bear.mp4"></video>
+
+        <audio src=""></audio>
+        <iframe src="https://www.w3schools.com/html/tryit.asp?filename=tryhtml5_video"></iframe>
+    </p>
 </body>
 
 </html>
