--- a/Lecture-03/index.html
+++ b/Lecture-03/index.html
@@ -13,7 +13,7 @@
         <div class="promotion--big">
             <img src="./assets/image/big-p.png">
         </div>
-        <div class="promotion--small">
+        <div class="promotion--small" id="ps">
             <img src="./assets/image/small-p.png">
             
         </div>
@@ -94,6 +94,6 @@
     </div>
     
 </body>
-
+<script src="./index.js"></script>
 </html>
 
